--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-curved-bottom-bar": "^3.5.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.5",
